ecmascript/parser/tests/jsx/errors/unterminated-string/input.js.stderr
error: Unexpected eof
 --> $DIR/tests/jsx/errors/unterminated-string/input.js:1:12
  |
1 | <foo bar="
  |            ^

